# Filexa-api

./: .gitignore  FileXa Folder Sturere.txt  filexa.db  init_db.py  main.py  new 10.txt  pyproject.toml  requirements.txt
api/v1/admin/: feature_toggle.py
api/v1/image/: compress_image.py  convert.py  crop_image.py  resize_image.py  rotate_image.py  router.py
api/v1/pdf/: compare_pdf.py  compress.py  crop_pdf.py  excel_to_pdf.py  html_to_pdf.py  jpg_to_pdf.py  merge.py  ocr_pdf.py  page_number_pdf.py  pdf_organize.py  pdf_to_excel.py  pdf_to_jpg.py  pdf_to_pdfa.py  pdf_to_ppt.py  pdf_to_word.py  ppt_to_pdf.py  protect_pdf.py  redact_pdf.py  repair_pdf.py  rotate.py  router.py  scan_pdf.py  sign_pdf.py  split.py  unlock_pdf.py  watermark.py  word_to_pdf.py
core/: config.py  database.py  logging.py
middleware/: feature_guard.py
models/: feature.py
services/image/: compress_image_service.py  convert_service.py  crop_image_service.py  resize_image_service.py  rotate_image_service.py
services/pdf/: compare_pdf_service.py  compress_service.py  crop_pdf_service.py  excel_to_pdf_service.py  html_to_pdf_service.py  jpg_to_pdf_service.py  merge_service.py  ocr_pdf_service.py  organize_pdf.py  page_numbers.py  pdf_to_excel_service.py  pdf_to_jpg_service.py  pdf_to_pdfa.py  pdf_to_ppt_service.py  pdf_to_word_service.py  ppt_to_pdf_service.py  protect_pdf_service.py  redact_pdf_service.py  repair_pdf.py  rotate_service.py  scan_to_pdf.py  sign_pdf_service.py  split_service.py  unlock_pdf_service.py  watermark_service.py  word_to_pdf_service.py
utils/: seed_features.py
